[gd_scene load_steps=7 format=3 uid="uid://d4fd8174s1wf6"]

[ext_resource type="Script" path="res://plank/EnemyPlank.gd" id="1_2y0e3"]
[ext_resource type="Texture2D" uid="uid://cldq4ypoidq0i" path="res://spritesheet/plank.png" id="2_63reu"]
[ext_resource type="Texture2D" uid="uid://dgljnolssbsqr" path="res://spritesheet/Restart.png" id="3_6y6ui"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(272, 26)

[sub_resource type="Curve2D" id="Curve2D_684xy"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -132, -27, 0, 0, 0, 0, 135, -27)
}
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jjjc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="EnemyPlank" type="Node2D"]
script = ExtResource("1_2y0e3")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="StaticBody2D"]
scale = Vector2(2.21875, 1.875)
texture = ExtResource("2_63reu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("1")

[node name="Path2D" type="Path2D" parent="StaticBody2D"]
curve = SubResource("Curve2D_684xy")

[node name="PathFollow2D" type="PathFollow2D" parent="StaticBody2D/Path2D"]
position = Vector2(-132, -27)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Button" type="Button" parent="."]
offset_left = -5.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = 4.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = -109.0
offset_top = 13.0
offset_right = 111.0
offset_bottom = 53.0
alignment = 1

[node name="xspin" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="ResetButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_0jjjc")
icon = ExtResource("3_6y6ui")

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="HBoxContainer/xspin" to="." method="_on_xspin_value_changed"]
[connection signal="pressed" from="HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
